# Synth

./: pyproject.toml
payloads/: kleo.py
synth/: Server.py  cli.py
synth/types/: Address.py  Connection.py
tests/: test_synth.py
