[tool.poetry]
name = "synth"
version = "0.0.1"
description = "C2 Server written in python."
authors = ["Kleo Hasani"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "synth.cli:start"